--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,21 @@
 :root {
   --white: #ffffff;
   --text: #f0f0f0;
+  --gray-text: #808080;
+  --err-text: #B71C1C;
   --theme-color: #6200ee;
   --easeOutExpo: cubic-bezier(0.16, 1, 0.3, 1);
   --duration: .6s;
   --transform: 0px;
+  --shadow: rgba(0, 0, 0, .45);
+  --header-height: 60px;
+  --font-size: calc(14px + (18 - 14) * ((100vw - 300px) / (1600 - 300)));
 }
 
 html {
-  color: #222;
-  font-size: 10px;
-  line-height: 1.4;
   box-sizing: border-box;
+  font-size: clamp(14px, var(--font-size), 18px);
+  line-height: 1.5;
 }
 
 *,
@@ -25,51 +29,38 @@ html {
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu,
     Cantarell, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  display: grid;
-
+  padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
 }
 
-.main-header {
+.app-header {
   position: relative;
-  z-index:1;
-  padding-bottom: 60px;
+  z-index: 1;
+  padding-bottom: var(--header-height);
 }
 
 .wrapper {
   position: fixed;
   display: grid;
-  grid-template-columns: 33px auto;
+  grid-template-columns: 30px auto;
   grid-gap: 2rem;
   width: 100%;
-  height: 60px;
+  height: var(--header-height);
   background-color: var(--theme-color);
-  color: var(--text);
-  padding: 0px 20px;
+  color: var(--white);
+  padding: 0px 1.5rem;
   align-items: center;
 }
 
 .hamburger span {
   display: block;
-  width: 28px;
-  height: 2px;
+  height: 3px;
   margin-bottom: 5px;
   position: relative;
-  background: var(--text);
+  background: var(--white);
   border-radius: 3px;
   z-index: 1;
-  transform-origin: 4px 0px;
-  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
-    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
-    opacity 0.55s ease;
 }
 
-.hamburger span:first-child {
-  transform-origin: 0% 0%;
-}
-
-.hamburger span:nth-last-child(2) {
-  transform-origin: 0% 100%;
-}
 
 .close-button {
   position: relative;
@@ -77,18 +68,14 @@ body {
   height: 32px;
 }
 
-.close-button:hover {
-  opacity: 1;
-}
-
 .close-button:before,
 .close-button:after {
   position: absolute;
   left: 15px;
   content: ' ';
-  height: 33px;
+  height: 32px;
   width: 2px;
-  background: var(--text);
+  background: var(--white);
 }
 
 .close-button:before {
@@ -100,36 +87,17 @@ body {
 }
 
 #overlay {
-  position: fixed; 
-  display: none; 
-  width: 100%; 
-  height: 100%; 
+  position: fixed;
+  display: none;
+  width: 100%;
+  height: 100%;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0,0,0,0.5); 
-  z-index: 2; 
+  background-color: var(--shadow);
+  z-index: 2;
   cursor: pointer;
-}
-
-
-#sidenav {
-  width: min(70%, 260px);
-  background-color: #fff;
-  border-inline-end: 1px var(--surface1);
-  box-shadow: 5px 0 40px rgba(0, 0, 0, .45);
-  z-index: 3;
-}
-
-#sidenav header {
-  width: 100%;
-  height: 56px;
-  background-color: var(--theme-color);
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  padding: 1.5rem;
 }
 
 #sidenav {
@@ -141,8 +109,21 @@ body {
   overscroll-behavior: contain;
   visibility: hidden;
   transform: translateX(-110vw);
-  will-change: transform;
   transition: transform var(--duration) var(--easeOutExpo), visibility 0s linear var(--duration);
+  width: min(70%, 260px);
+  background-color: var(--white);
+  box-shadow: 5px 0 40px var(--shadow);
+  z-index: 3;
+}
+
+#sidenav header {
+  width: 100%;
+  height: var(--header-height);
+  background-color: var(--theme-color);
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 1.5rem;
 }
 
 #sidenav.open {
@@ -156,8 +137,6 @@ nav {
   flex-direction: column;
   padding: 2rem;
   font-size: 1.25rem;
-  color: #e2e2e2;
-  color: var(--text)
 }
 
 #messages-container {
@@ -166,10 +145,9 @@ nav {
   overflow: hidden;
   scrollbar-width: none;
   transform: translateX(0);
-  will-change: transform;
   transition: transform 0.3s ease-out;
   cursor: grab;
-  padding: 1rem 1.5rem;
+  padding: 0.8rem;
   -webkit-overflow-scrolling: touch;
   overflow-y: scroll;
   scroll-behavior: smooth;
@@ -181,65 +159,97 @@ nav {
   transition: box-shadow .25s;
   border-radius: 2px;
   box-shadow: 0 2px 2px 0 rgb(0 0 0 / 14%), 0 3px 1px -2px rgb(0 0 0 / 12%), 0 1px 5px 0 rgb(0 0 0 / 20%);
-  margin: 1rem .5rem;
+  margin: 0.5rem;
   display: grid;
-  grid-template-rows: 60px auto;
-  font-size: 1.25rem;
-  padding: 1.5rem;
+  grid-template-rows: 4rem auto;
+  grid-gap: 0.6rem;
+  padding: 1.2rem;
   touch-action: none;
-  will-change: transform opacity;
   transform: translateX(var(--transform));
-  content-visibility: auto; 
-  contain-intrinsic-size: 100px 170px; 
+  content-visibility: auto;
+  contain-intrinsic-size: 100px 14rem;
 }
 
 .user-info {
-  flex-basis: 30px;
   display: grid;
-  grid-template-columns: 50px auto;
+  grid-template-columns: 3.5rem auto;
   grid-gap: 1.2rem;
+  align-items: center;
 }
 
 .user-info img {
-  width: 50px;
-  height: 50px;
+  width: 3.5rem;
+  height: 3.5rem;
   object-fit: contain;
   border-radius: 50%;
-  border: 1px solid black;
+  border: 1px solid var(--gray-text);
 }
 
 .user-name {
   font-weight: bold;
-  font-size: 1.4rem;
 }
 
 
 .user-msg {
-  margin: 0 0 1em 0;
   overflow: hidden;
+}
+
+time {
+  color: var(--gray-text);
+  font-size: 0.9rem;
 }
 
 .truncate {
   display: -webkit-box;
   -webkit-line-clamp: 4;
-  -webkit-box-orient: vertical;  
+  -webkit-box-orient: vertical;
 }
 
-.card-image {
-  max-width: 50%;
+.err-msg {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: var(--err-text);
+  display: none;
+  font-size: 1.5rem;
 }
 
-.card-stacked {
+.show {
+  display: block;
+}
+
+@keyframes bouncing-loader {
+  to {
+    opacity: 0.1;
+    transform: translate3d(0, -16px, 0);
+  }
+}
+
+.bouncing-loader {
   display: flex;
-  flex-direction: column;
-  flex: 1;
-  position: relative;
+  justify-content: center;
+  opacity: 0;
 }
 
-.card-content {
-  flex-grow: 1;
+.bouncing-loader>div {
+  width: 16px;
+  height: 16px;
+  margin: 3rem 0.2rem;
+  background-color: var(--theme-color);
+  border-radius: 50%;
+  animation: bouncing-loader 0.6s infinite alternate;
 }
 
-/* @media (prefers-reduced-motion: reduce) {
-  --duration: 1ms;
-} */
+.bouncing-loader>div:nth-child(2) {
+  animation-delay: 0.2s;
+}
+
+.bouncing-loader>div:nth-child(3) {
+  animation-delay: 0.4s;
+}
+
+.show-loader {
+  opacity: 1;
+}
+
